test/corpus/actions.txt
===========================
Empty actions
===========================

{}
rule main = parse _ {}
{}

---

(lexer_definition
  (action
    (ocaml))
  (lexer_entry
    name: (lexer_entry_name)
    (lexer_case
      (any)
      (action
        (ocaml))))
  (action
    (ocaml)))

===========================
Header and trailer
===========================

{
module Lexer = struct
}
rule main = parse _ {}
{
end
}

---

(lexer_definition
  (action
    (ocaml))
  (lexer_entry
    name: (lexer_entry_name)
    (lexer_case
      (any)
      (action
        (ocaml))))
  (action
    (ocaml)))

===========================
Strings and comments
===========================

rule main = parse
  | _ { "}" }
  | _ { {|}|} }
  | _ { (*}(*}*)*) }
  | _ { '}' }
  | _ { f' '"' }
  | _ { {} }
  | _ { (* '\" " *) }
  | _ { (* '" " *) }
  | _ { (* '*) }

---

(lexer_definition
  (lexer_entry
    name: (lexer_entry_name)
    (lexer_case
      (any)
      (action
        (ocaml)))
    (lexer_case
      (any)
      (action
        (ocaml)))
    (lexer_case
      (any)
      (action
        (ocaml)))
    (lexer_case
      (any)
      (action
        (ocaml)))
    (lexer_case
      (any)
      (action
        (ocaml)))
    (lexer_case
      (any)
      (action
        (ocaml)))
    (lexer_case
      (any)
      (action
        (ocaml)))
    (lexer_case
      (any)
      (action
        (ocaml)))
    (lexer_case
      (any)
      (action
        (ocaml)))))
