test/corpus/lexer-entries.txt
===========================
Actions
===========================

rule main = parse _ { main2 lexbuf }
and main2 = parse _ { () }

---

(lexer_definition
  (lexer_entry
    name: (lexer_entry_name)
    (lexer_case
      (any)
      (action
        (ocaml))))
  (lexer_entry
    name: (lexer_entry_name)
    (lexer_case
      (any)
      (action
        (ocaml)))))

===========================
Arguments
===========================

rule main x = parse _ {}
and main x y = parse _ {}

---

(lexer_definition
  (lexer_entry
    name: (lexer_entry_name)
    (lexer_argument)
    (lexer_case
      (any)
      (action
        (ocaml))))
  (lexer_entry
    name: (lexer_entry_name)
    (lexer_argument)
    (lexer_argument)
    (lexer_case
      (any)
      (action
        (ocaml)))))

===========================
Shortest
===========================

rule main = shortest _ {}

---

(lexer_definition
  (lexer_entry
    name: (lexer_entry_name)
    (lexer_case
      (any)
      (action
        (ocaml)))))

===========================
Multiple rules
===========================

rule main = parse
  | _ {}
and main = parse
  | _ {}
  | _ {}

---

(lexer_definition
  (lexer_entry
    name: (lexer_entry_name)
    (lexer_case
      (any)
      (action
        (ocaml))))
  (lexer_entry
    name: (lexer_entry_name)
    (lexer_case
      (any)
      (action
        (ocaml)))
    (lexer_case
      (any)
      (action
        (ocaml)))))
