test/corpus/refill-handlers.txt
===========================
Refill handler
===========================

{
let refill_handler k lexbuf = k lexbuf
}
refill {refill_handler}
rule main = parse _ {}

---

(lexer_definition
  (action
    (ocaml))
  (refill_handler
    (ocaml))
  (lexer_entry
    name: (lexer_entry_name)
    (lexer_case
      (any)
      (action
        (ocaml)))))

===========================
Anonymous function
===========================

refill {fun k lexbuf -> k lexbuf}
rule main = parse _ {}

---

(lexer_definition
  (refill_handler
    (ocaml))
  (lexer_entry
    name: (lexer_entry_name)
    (lexer_case
      (any)
      (action
        (ocaml)))))
